--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
   <h1>page title</h1>
+
+  <div>
+    <p>hello, world</p>
+    <p>lorem ipsum</p>
+    <p class="error">this is an error message</p>
+  </div>
+
+  <div class="content">
+    <p>this is the content</p>
+  </div>
   <script src="script.js"></script>
 </body>
 
