--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-  <h1>page title</h1>
+  <h1 class="title">The DOM</h1>
 
-  <div>
-    <p>hello, world</p>
-    <p>lorem ipsum</p>
-    <p class="error">this is an error message</p>
-  </div>
+  <p>lorem error ipsum</p>
+  <p>lorem success ipsum</p>
+  <p>lorem ipsum lorem</p>
+  <p>lorem ipsum success</p>
+  <p>error lorem ipsum</p>
+  <p>lorem ipsum lorem</p>
+  <p>lorem ipsum error</p>
+  <p>success lorem ipsum</p>
 
-  <div class="content">
-    <p>this is the content</p>
-  </div>
   <script src="script.js"></script>
 </body>
 
